objects/Diamond_Prices__c.object
<CustomObject>
    <fields>
        <fullName>CSN_Tier__c</fullName>
        <label>CSN Tier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor_Rate__c</fullName>
        <label>Floor Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Diamond Price</label>
    <nameField>
        <displayFormat>DP-{0000}</displayFormat>
        <label>Diamond Prices Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diamond Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Floor_Rate__c</columns>
        <columns>List_Price__c</columns>
        <columns>Product_Code__c</columns>
        <columns>CSN_Tier__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>